2019-11-21  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c (chx_set_running): New.
	(chx_init_arch): Use chx_set_running.
	(preempt, svc): Remove set to running, not needed.

	* chopstx-gnu-linux.c (chx_set_running): New.
	(chx_init_arch, chx_request_preemption, chx_sched): Use
	chx_set_running and chx_running.
	(chx_sched): Bug fix of return value handling.

2019-11-20  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.17.
	* doc/chopstx.texi (VERSION): 1.17.

	* chopstx-gnu-linux.c (chx_running): New.
	(chx_init_arch): Set RUNNING.

2019-11-19  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c (chx_running): New.
	(chx_init_arch): Set RUNNING.

	* chopstx.c (chx_init): Don't set RUNNING here.
	(chx_timer_expired): Use chx_running.
	(chx_systick_init, chx_exit, chx_mutex_unlock, chopstx_create)
	(chopstx_mutex_lock, chopstx_mutex_unlock, chopstx_cleanup_push)
	(chopstx_cleanup_pop, chopstx_exit, chopstx_cancel)
	(chopstx_testcancel, chopstx_setcancelstate, chx_proxy_init)
	(chopstx_poll, chopstx_setpriority): Likewise.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-gnu-linux.c (chx_systick_init_arch): Rename.
	(chx_interrupt_controller_init): Rename.
	* chopstx-cortex-m.c (chx_systick_init_arch): Rename.
	(chx_interrupt_controller_init): Rename.
	* chopstx.c (chx_systick_init): Use chx_systick_init_arch.
	(chx_init): Use chx_interrupt_controller_init.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_ready_pop): Check flag_sched_rr here.
	* chopstx-cortex-m.c (chx_sched) [__ARM_ARCH_6M__]: Use
	new interface of chx_ready_pop.
	(preempt,svc): Likewise.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c (ticks_to_usec): New.
	* chopstx-gnu-linux.c (ticks_to_usec): New.
	* chopstx.c (chx_snooze): Use ticks_to_usec.

2019-11-18  NIIBE Yutaka  <gniibe@fsij.org>

	* rules.mk (CSRC): Change the rule of entry*.c.
	* entry.c: It's only for Cortex-M, now.
	* entry-gnu-linux.c: New file.
